--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,6 @@
 
 <% @articles.each do |article| %>
   <h2><%= link_to article.title, article %></h2>
+  <p>	Published at
+	<%= article.created_at.strftime('%b %d, %Y') %></p>
 <% end %>
