--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,5 +3,7 @@
 <% @articles.each do |article| %>
   <h2><%= link_to article.title, article %></h2>
   <p>	Published at
-	<%= article.created_at.strftime('%b %d, %Y') %></p>
+	<%= article.created_at.strftime('%b %d, %Y') %>
+  by
+  <%= article.user.email %></p>
 <% end %>
