--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,22 @@
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <a><%= link_to 'Articles', root_path %></a>
+        <a><%= link_to 'Articles', root_path, class: "navbar-brand" %></a>
+
+        <% if user_signed_in? %>
+          <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to 'Ner Article', new_article_path, class: "navbar-brand" %></li>
+              <li><%= link_to "Account", edit_user_registration_path, class: "navbar-brand" %></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-brand" %></li>
+          </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar-brand" %>
+              <li><%= link_to "Sign In", new_user_session_path, class: "navbar-brand" %>
+
+            </ul>
+          <% end %>
+        </ul>
       </div>
     </nav>
 
