--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New Article</h1>
-
-<%= render 'form' %>
-<%= link_to 'Back', root_path %>
+<div class="col-md-8 col-md-offset-2">
+  <h1>New Article</h1>
+  <%= render 'form' %>
+  <%= link_to 'Back', root_path %>
+</div>
