Add validations for Article and customization some messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,22 @@
 
     <div class="container">
       <div class="row">
-          <p class="notice"><%= notice %></p>
-          <p class="alert"><%= alert %></p>
+
+        <div class="col-md-12">
+          <% flash.each do | name, message| %>
+          <div class="alert alert-<%= name %>">
+            <%= message %>
+          </div>
+          <% end %>
+        </div>
+
         <div class="col-md-12">
           <%= yield %>
       </div>
     </div>
+
+      <!-- <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p> -->
 
 
   </body>
