Add and setup Trix gem

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,6 +12,6 @@
 
 <%= simple_form_for @article do |f| %>
   <%= f.input :title %>
-  <%= f.input :content %>
+  <%= f.input :content, as: :trix_editor %>
   <%= f.button :submit %>
 <% end %>
