--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit Article</h1>
+<div class="col-md-8 col-md-offset-2">
+  <h1>Edit Article</h1>
 
-<%= render 'form' %>
-<%= link_to 'Back', root_path %>
+  <%= render 'form' %>
+  <%= link_to 'Back', root_path %>
+</div>
