--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @article.title %></h1>
-<p><%= @article.content %></p>
+<p><%= @article.content.html_safe %></p>
 
 <div>
   <h2><%= @article.comments.count %></h2>
