Fix Comments counter in show.html. Enable deleting end editing Comments

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,5 +4,6 @@
 	<%= article.created_at.strftime('%b %d, %Y') %>
   by
   <%= article.user.email %></p>
+  <p><%= article.comments.count %> Comments</p>
   <hr>
 <% end %>
