--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <a><%= link_to 'Articles', root_path, class: "navbar-brand" %></a>
+        <a><%= link_to 'Knowledge Base', root_path, class: "navbar-brand" %></a>
 
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
