--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,5 +2,5 @@
   <h1>Edit Article</h1>
 
   <%= render 'form' %>
-  <%= link_to 'Back', root_path %>
+  <%= link_to 'Back', root_path, class: "btn btn-primary"  %>
 </div>
