--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,17 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.content.html_safe %></p>
+<hr>
 
 <div>
-  <h2><%= @article.comments.count %></h2>
-  <%= render @article.comments %>
-  <h3>Reply to thread</h3>
+  <h3><%= pluralize(@article.comments.count, "Comment")  %></h3>
+	<% @comments.each do |comment| %>
+		<div>
+			<p><%= comment.user.email %></p>
+			<p><%= comment.comment %></p>
+      <!-- <%=  link_to "Edit", edit_article_comment_path(comment.article, comment) %>
+      <%= link_to "Delete", [comment.article, comment], method: :delete, data: { confirm: "Are you sure?" } %> -->
+    </div>
+  <% end %>
 	<%= render "comments/form" %>
 </div>
 
