--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for([@article, @article.comments.build]) do |f| %>
-  <%= f.input :comment %>
-  <%= f.submit class: "btn btn-default" %>
+  <%= f.input :comment, label: "Reply to theard" %>
+  <%= f.submit :Submit, class: "btn btn-default" %>
 <% end %>
+<br>
