Add Name to user

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
   <p>	Published at
 	<%= article.created_at.strftime('%b %d, %Y') %>
   by
-  <%= article.user.email %></p>
+  <%= article.user.name %></p>
   <p><%= article.comments.count %> Comments</p>
   <hr>
 <% end %>
