--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   <h3><%= pluralize(@article.comments.count, "Comment")  %></h3>
 	<% @comments.each do |comment| %>
 		<div>
-			<p><%= comment.user.email %></p>
+			<p><%= comment.user.name %></p>
 			<p><%= comment.comment %></p>
       <!-- <%=  link_to "Edit", edit_article_comment_path(comment.article, comment) %>
       <%= link_to "Delete", [comment.article, comment], method: :delete, data: { confirm: "Are you sure?" } %> -->
