--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,5 +5,6 @@
   by
   <%= article.user.name %></p>
   <p><%= article.comments.count %> Comments</p>
+  <p><%= article.get_likes.size %> Likes <%= article.get_dislikes.size %> Dilikes</p>
   <hr>
 <% end %>
