--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-8 col-md-offset-2">
   <h1>New Article</h1>
   <%= render 'form' %>
-  <%= link_to 'Back', root_path %>
+  <%= link_to 'Back', root_path, class: "btn btn-primary" %>
 </div>
