--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,44 +12,41 @@
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <a><%= link_to 'Knowledge Base', root_path, class: "navbar-brand" %></a>
+        <div class="col-md-8 col-md-offset-2">
+          <a><%= link_to 'Knowledge Base', root_path, class: "navbar-brand" %></a>
 
-        <% if user_signed_in? %>
-          <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to 'Ner Article', new_article_path, class: "navbar-brand" %></li>
-              <li><%= link_to "Account", edit_user_registration_path, class: "navbar-brand" %></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-brand" %></li>
-          </ul>
-          <% else %>
+          <% if user_signed_in? %>
             <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar-brand" %>
-              <li><%= link_to "Sign In", new_user_session_path, class: "navbar-brand" %>
-
+                <li><%= link_to 'Ner Article', new_article_path, class: "navbar-brand" %></li>
+                <li><%= link_to "Account", edit_user_registration_path, class: "navbar-brand" %></li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-brand" %></li>
             </ul>
-          <% end %>
-        </ul>
+            <% else %>
+              <ul class="nav navbar-nav navbar-right">
+                <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar-brand" %>
+                <li><%= link_to "Sign In", new_user_session_path, class: "navbar-brand" %>
+
+              </ul>
+            <% end %>
+          </ul>
+        </div>
       </div>
     </nav>
 
     <div class="container">
       <div class="row">
-
-        <div class="col-md-12">
+        <div class="col-md-8 col-md-offset-2">
           <% flash.each do | name, message| %>
           <div class="alert alert-<%= name %>">
             <%= message %>
           </div>
           <% end %>
-        </div>
-
-        <div class="col-md-12">
           <%= yield %>
       </div>
     </div>
 
       <!-- <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p> -->
-
 
   </body>
 </html>
